# bcs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
ark-bcs/: Cargo.toml
ark-bcs/src/: lib.rs  prelude.rs  tracer.rs
ark-bcs/src/bcs/: mod.rs  prover.rs  simulation_transcript.rs  transcript.rs  verifier.rs
ark-bcs/src/bcs/constraints/: proof.rs  transcript.rs  verifier.rs
ark-bcs/src/bcs/tests/: mock.rs  mod.rs
ark-bcs/src/bcs/tests/constraints/: mock.rs  mod.rs
ark-bcs/src/iop/: bookkeeper.rs  message.rs  mod.rs  oracles.rs  prover.rs  verifier.rs
ark-bcs/src/iop/constraints/: message.rs  mod.rs  oracles.rs
ark-bcs/src/ldt/: mod.rs  rl_ldt.rs
ark-bcs/src/ldt/constraints/: mod.rs  rl_ldt.rs
ark-bcs/src/test_utils/: mod.rs
examples/: sumcheck.rs
examples/sumcheck/: README.md  constraints.rs  main.rs  multiround_example.rs  simple_sumcheck.rs  test_utils.rs
examples/sumcheck-example/: Cargo.toml  README.md
examples/sumcheck-example/src/: constraints.rs  main.rs  simple_sumcheck.rs
lincheck/: Cargo.toml
lincheck/src/: lib.rs  matrix.rs
src/: lib.rs  tracer.rs
src/bcs/: bookkeeper.rs  message.rs  mod.rs  oracle.rs  prover.rs  transcript.rs  verifier.rs
src/bcs/constraints/: message.rs  mod.rs  proof.rs  transcript.rs  verifier.rs
src/bcs/tests/: mock.rs  mod.rs
src/bcs/tests/constraints/: mock.rs  mod.rs
src/iop/: bookkeeper.rs  constraints.rs  message.rs  mod.rs  oracles.rs  prover.rs  transcript.rs  verifier.rs
src/iop/constraints/: message.rs  mod.rs  oracles.rs
src/ldt/: constraints.rs  mod.rs  rl_ldt.rs
src/ldt/constraints/: mod.rs  rl_ldt.rs
src/ldt_trait/: constraints.rs  mod.rs
src/test_utils/: mod.rs
sumcheck/: Cargo.toml
sumcheck/src/: constraints.rs  lib.rs  protocol.rs  test_util.rs  util.rs  vp.rs
