[workspace]
members = [
    "ark-bcs",
    "sumcheck",
    "lincheck"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true
panic = "abort"

[profile.test]
opt-level = 1
debug-assertions = true
incremental = true
debug = true

[patch.crates-io]
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }