[package]
name = "sumcheck_example"
version = "0.3.0"
authors = [
    "arkworks contributors"
]
description = "A Simple Univariate Sumcheck Example for ark-bcs tutorial"
repository = "https://github.com/arkworks-rs/ark-bcs"
keywords = ["cryptography"]
categories = ["cryptography"]
include = ["Cargo.toml", "src"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-serialize = { version = "^0.3.0", features = ["derive"] }
ark-ff = { version = "^0.3.0" }
ark-poly = { version = "^0.3.0" }
ark-sponge = { version = "^0.3.0" }
ark-crypto-primitives = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
ark-ldt = { git = "https://github.com/arkworks-rs/ldt", branch = "main" }
ark-bcs = { path = "../../ark-bcs", features = ["test_utils", "r1cs"] }

ark-relations = { version = "^0.3.0" }
ark-r1cs-std = { version = "^0.3.1" }

tracing = { version = "0.1", default-features = false, features = ["attributes"] }
derivative = { version = "2.0", features = ["use_core"] }
hashbrown = "0.11.2"
tracing-subscriber = { version = "0.3" }
ark-ed-on-bls12-381 = { version = "^0.3.0" }
ark-bls12-381 = { version = "^0.3.0", features = ["curve"] }
ark-bls12-377 = { version = "^0.3.0", features = ["curve"] }




